[project]
name = "norton-guides"
version = "1.0.0"
description = "Site generation tool for publishable Norton Guide files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "ng2web>=1.5.0",
    "ngdb>=1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
